if HAVE_DOXYGEN
#directory = $(top_srcdir)/doc/man/man1/

#dist_man_MANS = $(directory)/sasutil.1
#$(directory)/sasutil.1: sasutil.1.stamp

#sasutil.1.stamp: ../src/sasutil.c
#	$(DOXYGEN) $(top_srcdir)/doc/libshpde-doxygen-sasutil.doxy
#	echo Timestamp > sasutil.1.stamp

#sph.1.stamp:
#	$(DOXYGEN) $(top_srcdir)/doc/libshpde-doxygen-sph.doxy
#	echo Timestamp > sph.1.stamp

#CLEANFILES = sasutil.1.stamp sph.1.stamp

#all-local: sasutil.1.stamp sph.1.stamp

#clean-local:
#	rm -rf $(top_srcdir)/doc/man
#	rm -rf $(top_srcdir)/doc/html
#	rm -rf $(top_srcdir)/doc/latex

endif # HAVE_DOXYGEN
