# This file is part of libsphde.

AM_CFLAGS = -Wall -Werror -I$(top_srcdir)/src

noinst_PROGRAMS = \
  example_sph_1 \
  example_sph_2_1 \
  example_sph_2_2 \
  example_sph_3 \
  example_sphtimer \
  example_sasindex \
  example_sph_4

example_sph_1_SOURCES = example_sph_1.c
example_sph_1_CFLAGS  = $(AM_CFLAGS)
example_sph_1_LDADD   = $(AM_LDADD) ../src/libsphde.la

example_sph_2_1_SOURCES = example_sph_2_1.c
example_sph_2_1_CFLAGS  = $(AM_CFLAGS)
example_sph_2_1_LDADD   = $(AM_LDADD) ../src/libsphde.la

example_sph_2_2_SOURCES = example_sph_2_2.c
example_sph_2_2_CFLAGS  = $(AM_CFLAGS)
example_sph_2_2_LDADD   = $(AM_LDADD) ../src/libsphde.la

example_sph_3_SOURCES = example_sph_3.c
example_sph_3_CFLAGS  = $(AM_CFLAGS)
example_sph_3_LDADD   = $(AM_LDADD) ../src/libsphde.la

example_sphtimer_SOURCES = example_sphtimer.c
example_sphtimer_CFLAGS  = $(AM_CFLAGS)
example_sphtimer_LDADD   = $(AM_LDADD) ../src/libsphde.la

example_sasindex_SOURCES = example_sasindex.c
example_sasindex_CFLAGS  = $(AM_CFLAGS)
example_sasindex_LDADD   = $(AM_LDADD) ../src/libsphde.la

example_sph_4_SOURCES = example_sph_4.c
example_sph_4_CFLAGS  = $(AM_CFLAGS)
example_sph_4_LDADD   = $(AM_LDADD) ../src/libsphde.la
